crates/sgf-core/tests/snapshots/ops_add_system/add_dorellion_belted.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added Dorellion #791 at (433.43269, -205.48736) with 13 bodies, 2 belts and 1 lane
touched: [217, 791]
inverse: RemoveSystem { system: 791 }
… and 3 other issues

--- gamestate
+++ gamestate
@@ -44220,6 +44220,11 @@
 				length=18
 			}
  
+			{
+				to=791
+				length=43
+			}
+ 
 		}
 		asteroid_belts=
 		{
@@ -82543,6 +82548,67 @@
 		index=0
 		storm=4294967295
 	}
+	791=
+	{
+		coordinate=
+		{
+			x=433.43269
+			y=-205.48736
+			origin=4294967295
+			visual_height=4.31213
+		}
+		name=
+		{
+			key="Dorellion"
+		}
+		planet=8403
+		planet=8404
+		planet=8405
+		planet=8406
+		planet=8407
+		planet=8408
+		planet=8409
+		planet=8410
+		planet=8411
+		planet=8412
+		planet=8413
+		planet=8414
+		planet=8415
+		star_class="sc_g"
+		hyperlane=
+		{
+			
+			{
+				to=217
+				length=43
+			}
+ 
+		}
+		asteroid_belts=
+		{
+			
+			{
+				type="rocky_asteroid_belt"
+				inner_radius=95
+			}
+ 
+			{
+				type="icy_asteroid_belt"
+				inner_radius=240
+			}
+ 
+		}
+		initializer="basic_init_05"
+		inner_radius=270
+		outer_radius=370
+		starbases=
+		{
+			4294967295 
+		}
+		sector=4294967295
+		index=0
+		storm=4294967295
+	}
 }
 starbase_mgr=
 {
@@ -530216,6 +530282,627 @@
 				4988 
 			}
 		}
+		8403=
+		{
+			planet_class="pc_g_star"
+			planet_size=25
+			carrier_binary_flags=3
+			name=
+			{
+				key="STAR_NAME_1_OF_1"
+				variables=
+				{
+					
+					{
+						key="NAME"
+						value=
+						{
+							key="Dorellion"
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=0
+				y=0
+				origin=791
+			}
+			orbit=0
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+			deposits=
+			{
+				16777216 
+			}
+		}
+		8404=
+		{
+			planet_class="pc_molten"
+			planet_size=12
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="Dorellion"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="I"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=56.29165
+				y=32.5
+				origin=791
+			}
+			orbit=65
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+		}
+		8405=
+		{
+			planet_class="pc_barren"
+			planet_size=14
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="Dorellion"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="II"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=-73.61216
+				y=42.5
+				origin=791
+			}
+			orbit=85
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+		}
+		8406=
+		{
+			planet_class="pc_asteroid"
+			planet_size=5
+			carrier_binary_flags=1
+			name=
+			{
+				key="ASTEROID_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="prefix"
+						value=
+						{
+							key="9965-"
+						}
+					}
+ 
+					{
+						key="suffix"
+						value=
+						{
+							key="140"
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=-16.49658
+				y=93.55674
+				origin=791
+			}
+			orbit=95
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+		}
+		8407=
+		{
+			planet_class="pc_asteroid"
+			planet_size=5
+			carrier_binary_flags=1
+			name=
+			{
+				key="ASTEROID_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="prefix"
+						value=
+						{
+							key="LK12-"
+						}
+					}
+ 
+					{
+						key="suffix"
+						value=
+						{
+							key="0004"
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=-93.55674
+				y=-16.49658
+				origin=791
+			}
+			orbit=95
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+		}
+		8408=
+		{
+			planet_class="pc_continental"
+			planet_size=16
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="Dorellion"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="III"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=-18.23306
+				y=-103.40481
+				origin=791
+			}
+			orbit=105
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=2
+			deposits=
+			{
+				16777217 16777218 16777219 
+			}
+		}
+		8409=
+		{
+			planet_class="pc_gas_giant"
+			planet_size=25
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="Dorellion"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="IV"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=136.25543
+				y=49.59292
+				origin=791
+			}
+			orbit=145
+			last_bombardment=			"0.01.01"
+			moons=
+			{
+				8410 8411 
+			}
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=2
+			deposits=
+			{
+				16777220 
+			}
+		}
+		8410=
+		{
+			planet_class="pc_frozen"
+			planet_size=8
+			carrier_binary_flags=1
+			name=
+			{
+				key="SUBPLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="PLANET_NAME_FORMAT"
+							variables=
+							{
+								
+								{
+									key="PARENT"
+									value=
+									{
+										key="Dorellion"
+									}
+								}
+ 
+								{
+									key="NUMERAL"
+									value=
+									{
+										key="IV"
+										literal=yes
+									}
+								}
+ 
+							}
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="a"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			binary_flags=576
+			coordinate=
+			{
+				x=143.75543
+				y=62.5833
+				origin=791
+			}
+			orbit=15
+			last_bombardment=			"0.01.01"
+			moon_of=8409
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+		}
+		8411=
+		{
+			planet_class="pc_barren_cold"
+			planet_size=6
+			carrier_binary_flags=1
+			name=
+			{
+				key="SUBPLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="PLANET_NAME_FORMAT"
+							variables=
+							{
+								
+								{
+									key="PARENT"
+									value=
+									{
+										key="Dorellion"
+									}
+								}
+ 
+								{
+									key="NUMERAL"
+									value=
+									{
+										key="IV"
+										literal=yes
+									}
+								}
+ 
+							}
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="b"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			binary_flags=576
+			coordinate=
+			{
+				x=125.25543
+				y=30.54036
+				origin=791
+			}
+			orbit=22
+			last_bombardment=			"0.01.01"
+			moon_of=8409
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+		}
+		8412=
+		{
+			planet_class="pc_toxic"
+			planet_size=15
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="Dorellion"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="V"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=-164.44621
+				y=-59.85353
+				origin=791
+			}
+			orbit=175
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+		}
+		8413=
+		{
+			planet_class="pc_frozen"
+			planet_size=13
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="Dorellion"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="VI"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=-70.11413
+				y=192.63699
+				origin=791
+			}
+			orbit=205
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+		}
+		8414=
+		{
+			planet_class="pc_ice_asteroid"
+			planet_size=5
+			carrier_binary_flags=1
+			name=
+			{
+				key="ASTEROID_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="prefix"
+						value=
+						{
+							key="B12-"
+						}
+					}
+ 
+					{
+						key="suffix"
+						value=
+						{
+							key="44-D1"
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=41.67556
+				y=236.35386
+				origin=791
+			}
+			orbit=240
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+		}
+		8415=
+		{
+			planet_class="pc_ice_asteroid"
+			planet_size=5
+			carrier_binary_flags=1
+			name=
+			{
+				key="ASTEROID_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="prefix"
+						value=
+						{
+							key="6467-"
+						}
+					}
+ 
+					{
+						key="suffix"
+						value=
+						{
+							key="109-D"
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=-236.35386
+				y=41.67556
+				origin=791
+			}
+			orbit=240
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+		}
 	}
 }
 astral_rifts=
@@ -954250,7 +954937,7 @@
 {
 }
 last_created_country=56
-last_created_system=790
+last_created_system=791
 leaders=
 {
 	419430400=
@@ -1466966,11 +1467653,51 @@
 }
 deposit=
 {
-	0=none
-	1=none
-	2=none
-	3=none
-	4=none
+	16777216=
+	{
+		type="d_energy_5"
+		deposit_holder=
+		{
+			type=0
+			id=8403
+		}
+	}
+	16777217=
+	{
+		type="d_rugged_woods"
+		deposit_holder=
+		{
+			type=0
+			id=8408
+		}
+	}
+	16777218=
+	{
+		type="d_dense_jungle"
+		deposit_holder=
+		{
+			type=0
+			id=8408
+		}
+	}
+	16777219=
+	{
+		type="d_dense_jungle"
+		deposit_holder=
+		{
+			type=0
+			id=8408
+		}
+	}
+	16777220=
+	{
+		type="d_energy_5"
+		deposit_holder=
+		{
+			type=0
+			id=8409
+		}
+	}
 	5=none
 	6=none
 	7=none
@@ -1544877,7 +1545604,6 @@
 	}
 	star_names=
 	{
-		"Dorellion"
 		"Romin"
 		"Tau_Ceti"
 		"Horschim"
@@ -1547431,7 +1548157,6 @@
 		"DX-1"
 		"354-F"
 		"76-1"
-		"44-D1"
 		"12"
 		"94"
 		"BS12"
@@ -1550610,7 +1551335,6 @@
 		"906"
 		"038"
 		"3547"
-		"109-D"
 		"3427"
 		"5498"
 		"U-46"
@@ -1555737,7 +1556461,6 @@
 		"BS12"
 		"GR-784"
 		"T-668"
-		"140"
 		"742"
 		"09-L"
 		"411"
@@ -1558209,7 +1558932,6 @@
 		"K14"
 		"TS-8"
 		"72"
-		"0004"
 		"32-X"
 		"55987"
 		"572"
